Add archive functionality and enhance portrait rendering, new backgrounds and VFXs based on the pathway and sequence